Version 3.17

2018-02-12 release(3.17.2693)
* IMPROVEMENT: Added KSI_ATTRIB and KSI_UNUSED to annotate functions.
* FEATURE: Added CommonCrypto for hashing as an alternative to OpenSSL.
* IMPROVEMENT: Removed deprecated interface KSI_Signature_getSignerIdentity.
* IMPROVEMENT: Added consistency tests for public include files (make include-test).
* IMPROVEMENT: Moved all implementation h-files into src/ksi/impl directory.
* IMPROVEMENT: Added deprecated and obsolete times to hash functions.
* IMPROVEMENT: SHA-1 is deprecated as of 01.07.2016T00:00 UTC.
* BUGFIX: Removed double close of the KSI_DataHasher when calculating the calendar hash chain.
* IMPROVEMENT: Added double close guards and tests for KSI_DataHasher.
* BUGFIX: Script rebuild-deb.sh works on Ubuntu.
* IMPROVEMENT: Debian packaging refactored.
* FEATURE: Support for non-blocking HTTP connection (with WinINet and WinHTTP).
* FEATURE: Support for non-blocking HTTP connection (with libcurl).
* IMPROVEMENT: Added support for OpenSSL 1.1 api.
* FEATURE: Request server configuration using KSI_AsyncHandle.
* FEATURE: Return push configuration via KSI_AsyncHandle if KSI_CTX option KSI_OPT_AGGR_CONF_RECEIVED_CALLBACK is not set.
* FEATURE: KSI_CTX options KSI_OPT_PUBFILE_CACHE_TTL_SECONDS for setting the cached publications file timeout.

Version 3.16

2017-11-21 release(3.16.2482)
* BUGFIX: Fixed EINTR (signal) issues with TCP and cURL.

2017-10-12 release(3.16.2475)
* BUGFIX: Fixed logging in net_http_curl.c when using 32-bit OS.
* FEATURE: Support for non-blocking TCP connection.
* IMPROVEMENT: Added an example for non-bloking signing.
* IMPROVEMENT: Debian package name contains debian version.
* IMPROVEMENT: Debian packaaging dependecies fixed.
* IMPROVEMENT: Debian changelog is generated from the main changelog.
* IMPROVEMENT: Libksi Debian/Ubuntu dependencies changed to make it work on both Debian 9 and Ubuntu 16.

Version 3.15

2017-09-12 release(3.15.2306)